Updated contact info

--- a/8kwpackage-cotabato.html
+++ b/8kwpackage-cotabato.html
@@ -85,8 +85,8 @@
             </div>
 
             <!-- Right hero card -->
-            <aside class="relative rounded-3xl border border-white/10 bg-[radial-gradient(circle_at_top,rgba(248,250,252,0.05),rgba(15,23,42,0.96))] p-5 shadow-hc-soft">
-                <div class="pointer-events-none absolute inset-0 opacity-90 mix-blend-screen bg-[radial-gradient(circle_at_0_0,rgba(248,250,252,0.12)_0,transparent_42%),radial-gradient(circle_at_100%_0,rgba(251,191,36,0.28)_0,transparent_55%)]"></div>
+            <aside class="relative overflow-hidden rounded-3xl border border-white/10 bg-[radial-gradient(circle_at_top,rgba(248,250,252,0.05),rgba(15,23,42,0.96))] p-5 shadow-hc-soft">
+                <div class="pointer-events-none absolute inset-0 rounded-3xl opacity-90 mix-blend-screen bg-[radial-gradient(circle_at_0_0,rgba(248,250,252,0.12)_0,transparent_42%),radial-gradient(circle_at_100%_0,rgba(251,191,36,0.28)_0,transparent_55%)]"></div>
                 <div class="relative">
                     <div class="text-[13px] uppercase tracking-[0.16em] text-hc-text-muted">
                         All-In Investment
@@ -422,12 +422,12 @@
                     Book a Free Site Assessment
                 </h3>
                 <p class="mb-3 text-[14px] text-hc-text-muted">
-                    Replace the details below with your actual contacts, or connect this section to a form:
+                    Contact HopeCraft Solar through any of the channels below:
                 </p>
                 <ul class="ml-4 list-disc text-[13px] text-hc-text-muted">
-                    <li>Email: <b class="text-hc-accent-strong">sales@hopecraftsolar.com</b></li>
-                    <li>Mobile / Viber: <b class="text-hc-accent-strong">+63 9xx xxx xxxx</b></li>
-                    <li>Facebook Page: <b class="text-hc-accent-strong">@HopeCraftSolar</b></li>
+                    <li>Email: <b class="text-hc-accent-strong">hopecraftsolar@gmail.com</b></li>
+                    <li>Mobile / Viber: <b class="text-hc-accent-strong">+63 917 625 0919</b></li>
+                    <li>Facebook Page: <b class="text-hc-accent-strong">fb.com/hopecraftsolar</b></li>
                 </ul>
 
                 <p class="mt-3 text-[12px] text-hc-text-muted">
